--- a/Sesion02SQL.ipynb
+++ b/Sesion02SQL.ipynb
@@ -16,7 +16,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "<h1>Sesión N° 02 - Utilizando Operadores de Conjuntos de Datos"
+                "<h1>Sesión N° 02 - Utilizando Operadores de Conjuntos de Datos - Carlos Daniel Ayala Ramos"
             ],
             "metadata": {
                 "azdata_cell_guid": "d0c4d935-9c5d-43a3-a9b0-a06e7c6b3e84"
